# flaubert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
flaubert/: einstellungen.py
flaubert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flaubert/Flaubert.egg-info/: PKG-INFO  top_level.txt
flaubert/eda/: __init__.py  dbeschreiben.py  dfgestalt.py
flaubert/ersatz/: dfersatz.py
flaubert/fselekt/: __init__.py  feature_importance.py  feature_scoring.py
flaubert/fselekt/feature_importance/: activation_functions.py  feature_importance.py  partial_derivatives.py
flaubert/model/clustering/: clxplorer.py  simple_clusters.py  xDBScan.py  xclusters_vergleicher.py
flaubert/model/decision_trees/: dt.py  dt_utils.py  xbayes.py
flaubert/model/genetic/: formelDT.py  gp_dt_optim.py
flaubert/model/neural_networks/: mlp.py  simplenn.py  tf_dnn.py  xnn.py
flaubert/model/neural_networks/torchstuff/: model_analyzer.py  torch_beispiele.py  torch_clf.py  torch_seq.py  tutils.py
flaubert/model/outliers/: isoforest.py  sklearn_detect.py  xIQR.py
flaubert/statistik/: abtest.py  stat_op.py  xcorrs.py
flaubert/testing/: check_xnn.py
flaubert/transform/: df_redux.py  kateg.py  transform_norm.py
flaubert/utils/: daten_laden.py  signal_verarbeitung.py  utilpy.py  zahlen_checks.py
flaubert/vis/: xdiagramme.py
