[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flaubert"
version = "0.2"
authors = [
    {name="mktech", email="9596910+mktex@users.noreply.github.com"},
]
description = "Python Module und Skripte für ML"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License"
]



